<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyProfile">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="31dp"
        android:src="@drawable/profile"
        android:contentDescription="@string/profile_picture" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:text="@string/my_name"
        android:textColor="#000"
        android:textAlignment="center"
        android:textSize="25sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="5sp"
        android:paddingLeft="20sp"
        android:paddingTop="5sp"
        android:text="@string/track"
        android:textSize="25sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:paddingRight="5sp"
        android:paddingLeft="5sp"
        android:paddingTop="5sp"
        android:text="@string/track_value" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5sp"
            android:paddingLeft="20sp"
            android:paddingTop="5sp"
            android:text="@string/country"
            android:textSize="25sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:paddingRight="5sp"
            android:paddingLeft="5sp"
            android:paddingTop="5sp"
            android:text="@string/country_name" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5sp"
            android:paddingLeft="20sp"
            android:paddingTop="5sp"
            android:text="@string/email"
            android:textSize="25sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:paddingRight="5sp"
            android:paddingLeft="5sp"
            android:paddingTop="5sp"
            android:text="@string/email_value" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5sp"
            android:paddingLeft="20sp"
            android:paddingTop="5sp"
            android:text="@string/phone_number"
            android:textSize="25sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:paddingRight="5sp"
            android:paddingLeft="5sp"
            android:paddingTop="5sp"
            android:text="@string/phone_value" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5sp"
            android:paddingLeft="20sp"
            android:paddingTop="5sp"
            android:text="@string/slack_username"
            android:textSize="25sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:paddingRight="5sp"
            android:paddingLeft="5sp"
            android:paddingTop="5sp"
            android:text="@string/username" />
    </LinearLayout>



</LinearLayout>